# pd-exercises

./: CMakeLists.txt  README.md  corde_tilde.c  cross_synth.c  duck.def  duck_tilde.c
linux_builds/: cross_synth~.pd_linux  duck~-help.pd  duck~.pd_linux
